Update link to GitHub

--- a/include/footer.html
+++ b/include/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div id="social">
-    <a href="https://github.com/Lanseuo">
+    <a href="https://github.com/Lanseuo/devExamples">
       <i id="github" class="fa fa fa-github fa-5x"></i>
     </a>
   </div>
