--- a/include/footer.html
+++ b/include/footer.html
@@ -5,6 +5,6 @@
     </a>
   </div>
   <div id="copyright">
-    <p>&copy;2017 by devExamples
+    <p>Copyright ©2017 devExamples by <a href="https://lucas-hild.de" target="_blank">Lucas Hild</a></p>
   </div>
 </footer>
