Update font-awesome CDN

--- a/include/nav.html
+++ b/include/nav.html
@@ -1,7 +1,7 @@
 <nav>
   <div id="nav-left">
-    <a href="http://devExamples.cf">
-      <img src="http://devexamples.cf/logo.png" alt="logo" width="50px">
+    <a href="/index.html">
+      <img src="/logo.png" alt="logo" width="50px">
       <!-- <p id"site-title">devExamples</p> -->
     </a>
   </div>
