--- a/include/nav.html
+++ b/include/nav.html
@@ -6,8 +6,8 @@
     </a>
   </div>
   <ul>
-    <li><a>Blog</a></li>
-    <li><a>Sign Up</a></li>
-    <li><a>Sign In</a></li>
+    <li><a title="not yet available">Blog</a></li>
+    <li><a title="not yet available">Sign Up</a></li>
+    <li><a title="not yet available">Sign In</a></li>
   </ul>
 </nav>
