--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,7 +56,7 @@ nav li a:hover {
 
 /* Header */
 header {
-  background-image: url(header.png);
+  background-image: url("/static/img/header.png");
   height: 400px;
   text-align: center;
   width: 100%;
@@ -80,7 +80,7 @@ main {
 
 /* Footer */
 #social {
-  background-image: url(header.png);
+  background-image: url("/static/img/header.png");
   text-align: center;
   width: 100%;
   height: 100px;
