--- a/include/nav.html
+++ b/include/nav.html
@@ -7,7 +7,6 @@
   </div>
   <ul>
     <li><a title="not yet available">Blog</a></li>
-    <li><a title="not yet available">Sign Up</a></li>
-    <li><a title="not yet available">Sign In</a></li>
+    <li><a href="#">Sign In for More Lessons!</a></li>
   </ul>
 </nav>
