--- a/include/nav.html
+++ b/include/nav.html
@@ -7,6 +7,6 @@
   </div>
   <ul>
     <li><a title="not yet available">Blog</a></li>
-    <li><a href="#">Sign In for More Lessons!</a></li>
+    <li><a href="https://www.authpro.com/auth/devExamples/">Sign In for More Lessons!</a></li>
   </ul>
 </nav>
