--- a/include/footer.html
+++ b/include/footer.html
@@ -1,10 +1,11 @@
 <footer>
   <div id="social">
-    <a href="https://github.com/Lanseuo/devExamples" target="_blank">
+    <a href="https://github.com/devExamples/devexamples.github.io" target="_blank">
       <i id="github" class="fa fa fa-github fa-5x"></i>
     </a>
   </div>
   <div id="copyright">
-    <p>Copyright ©2017 devExamples by <a href="https://lucas-hild.de" target="_blank">Lucas Hild</a></p>
+    <p>Copyright &copy; 2017, 2020 devExamples by <a href="https://lucas-hild.de" target="_blank">Lucas Hild</a> and <a href="https://thetechrobo.github.io" target="_blank">TheTechRobo</a>.</p>
+    <p>Licensed under the DBAD license; find it <a href="https://github.com/devExamples/devexamples.github.io/blob/master/LICENSE.md" target="_blank">here</a>.</p>
   </div>
 </footer>
