Remove sign-in feature (I don't want to restrict it)
Also add a link to github

--- a/include/nav.html
+++ b/include/nav.html
@@ -6,7 +6,6 @@
     </a>
   </div>
   <ul>
-    <li><a title="not yet available">Blog</a></li>
-    <li><a href="https://www.authpro.com/auth/devExamples/">Sign In for More Lessons!</a></li>
+    <li><a href="https://github.com/Lanseuo/devExamples">GitHub</a></li>
   </ul>
 </nav>
