--- a/include/nav.html
+++ b/include/nav.html
@@ -1,7 +1,7 @@
 <nav>
   <div id="nav-left">
     <a href="/index.html">
-      <img src="/static/img/logo.png" alt="logo" width="50px">
+      <img src="/static/img/logo.png" alt="devExamples logo" width="50px">
       <!-- <p id"site-title">devExamples</p> -->
     </a>
   </div>
