--- a/include/nav.html
+++ b/include/nav.html
@@ -6,6 +6,6 @@
     </a>
   </div>
   <ul>
-    <li><a href="https://github.com/devExamples/devExamples">GitHub</a></li>
+    <li><a href="https://github.com/devExamples/devexamples.github.io">GitHub</a></li>
   </ul>
 </nav>
